--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.263.1",
+    "openai": "^5.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
